<resources>
    <string name="app_name">複利試算</string>

    <string name="calculation">試算</string>
    <string name="history">紀錄</string>
    <string name="info">資訊</string>

    <string name="principal">本金</string>
    <string name="interest">利率(%)</string>
    <string name="period">週期</string>
    <string name="period_with_type">週期%1$s</string>
    <string name="invest">%1$s投資%2$s</string>
    <string name="calculate">試算</string>
    <string name="clear">清除</string>
    <string name="optional">(選填)</string>
    <string name="please_enter">請輸入</string>
    <string name="no_record">無紀錄</string>
    <string name="error">發生錯誤</string>

    <string name="simple_interest_amount">單利本利和</string>
    <string name="compound_interest_amount">複利本利和</string>
    <string name="invest_interest_amount">定期定額複利本利和</string>

    <string name="simple_interest">單利</string>
    <string name="compound_interest">複利</string>
    <string name="invest_interest">定期定額複利</string>

    <string name="simple_interest_description">
        每期的利息不滾入本金\n\n每期利息 = 本金 x 利率\n\n本利和 = 本金 x (1 + 週期 x 利率)
    </string>

    <string name="compound_interest_description">
        每期的利息滾入本金作為下一期的本金\n\n每期利息 = 前一期本利和 x 利率\n\n本利和 = 本金 x (1 + 利率) ^ 週期
    </string>

    <string name="invest_interest_description">
        每期的利息滾入本金之外，再加入每期投資金額，作為下一期的本金\n\n每期利息 = 前一期本利和 x 利率\n\n本利和＝本金 x (1 + 利率) ^ 週期\n
        + 每期投資金額 x [\n
        &#160;&#160;(1 + 利率) ^ (週期 - 1) + \n
        &#160;&#160;(1 + 利率) ^ (週期 - 2) + \n
        &#160;&#160;&#8230; + \n
        &#160;&#160;(1 + 利率) ^ 0\n
        ]
    </string>

    <string-array name="period_array">
        <item>年</item>
        <item>季</item>
        <item>月</item>
    </string-array>
</resources>
