<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:animateLayoutChanges="true">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:visibility="gone">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="@dimen/_14sdp"
                        android:text="@string/simple_interest_amount"/>

                    <TextView
                        android:id="@+id/simple_interest_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_16sdp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@color/colorDivider"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="@dimen/_14sdp"
                        android:text="@string/compound_interest_amount"/>

                    <TextView
                        android:id="@+id/compound_interest_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_16sdp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@color/colorDivider"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="@dimen/_14sdp"
                        android:text="@string/invest_interest_amount"/>

                    <TextView
                        android:id="@+id/invest_interest_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_16sdp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/principal_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:nextFocusDown="@+id/interest_field"
                    android:hint="@string/principal"
                    android:textSize="@dimen/_12sdp"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:baselineAligned="true">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5">

                    <EditText
                        android:id="@+id/interest_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:nextFocusDown="@+id/period_field"
                        android:hint="@string/interest"
                        android:textSize="@dimen/_12sdp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5">

                    <EditText
                        android:id="@+id/period_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:nextFocusDown="@+id/invest_field"
                        android:hint="@string/period"
                        android:textSize="@dimen/_12sdp"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <EditText
                    android:id="@+id/invest_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:imeOptions="actionDone"
                    android:hint="@string/invest"
                    android:textSize="@dimen/_12sdp"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <Button
                    android:id="@+id/calculate_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@drawable/button_bg"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@android:color/white"
                    android:text="@string/calculate"
                    style="?android:attr/buttonBarButtonStyle"/>

                <Button
                    android:id="@+id/clear_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:background="@drawable/button_bg"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@android:color/white"
                    android:text="@string/clear"
                    style="?android:attr/buttonBarButtonStyle"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>