<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/_12sdp"
            android:text="@string/simple_interest_amount"/>

        <TextView
            android:id="@+id/simpleInterest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_14sdp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/colorDivider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/_12sdp"
            android:text="@string/compound_interest_amount"/>

        <TextView
            android:id="@+id/compoundInterest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_14sdp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/colorDivider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/_12sdp"
            android:text="@string/invest_interest_amount"/>

        <TextView
            android:id="@+id/investInterest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_14sdp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/colorDivider"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/_10sdp"
                android:text="本　金"/>

            <TextView
                android:id="@+id/principal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_10sdp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_12sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/_10sdp"
                android:text="年利率(%)"/>

            <TextView
                android:id="@+id/interest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_12sdp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/_10sdp"
                android:text="年投資"/>

            <TextView
                android:id="@+id/invest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_10sdp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_12sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/_10sdp"
                android:text="週期(年)"/>

            <TextView
                android:id="@+id/period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_12sdp"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>